[tool.poetry]
name = "twitter-monitor"
version = "0.1.0"
description = "A Twitter monitoring application with user authentication"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
feedparser = "^6.0.8"
werkzeug = "^2.0.1"
beautifulsoup4 = "^4.13.3"
flask-socketio = "^5.5.1"
requests = "^2.32.3"
lxml = "^5.3.1"
eventlet = "^0.39.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "twitter_monitor:app.run"